base things complete, just need to fix fonts and spacing

--- a/styles.scss
+++ b/styles.scss
@@ -127,6 +127,7 @@ h2{
         }
         
     }
+// gallery section
 
     #gallery {
         .galleryBox {
@@ -136,6 +137,9 @@ h2{
             flex-direction: row;
             flex-wrap: wrap;
         }
+        h2 {
+            margin:0;
+        }
         
     }
 
@@ -144,11 +148,36 @@ h2{
         max-width: 50%;
         width: 50%;
         padding: 5% 10%;
+        position: relative;
         a {
             color: red;
         }
     }
 
+    .imageBoxbottom {
+        background: lightgray;
+        width: 388px;
+        height: 50%;
+        margin-top: -5px;
+        margin-bottom: -43px;
+        line-height: 1.5rem;
+    }
+
+    .dateBox {
+        border: 1px solid purple;
+      width: 5rem; 
+      height: 1rem;
+      position: absolute;
+      top: 15.5rem;
+    right: 6rem;
+        p {
+            border: 1px solid brown;
+            background: red;
+            color: white;
+        }
+    }
+
+    // contact form
     #contactForm{
         display: flex;
         flex-direction: row;
@@ -171,15 +200,18 @@ h2{
         }
     }
 
-    #2colFooter{
-        width: 100%;
+  
+            .footerWrapper{
+        max-width: 100%;
         display: flex;
         flex-direction: row;
-        background: darkslategrey;
-            a {
-                color: white;  
-            }
+        background: rgb(18, 20, 20);
+        border: 1px solid orchid;
+        color: white;
+        justify-content: space-around;
+        align-content: center;
     }
+            
 
 
 
